# OntoCheck

./: .readthedocs.yaml  LICENSE  README.md  TEST.ipynb  assessment_scores.csv  out.csv  pyproject.toml  requirements.txt
.github/workflows/: deploy-site.yml
SupplementaryMaterials/Ontologies/: Capacitor-Equipment.ttl  Capacitor-Sample.ttl  Capacitor-SampleHolder.ttl  CaseStudy1-XRD_Capacitors_Combined.ttl  CaseStudy2-XRD_Geospatial_Combined.ttl  EBSD.ttl  GeoOutage.ttl  Geospatial-Rasters.ttl  Geospatial-SatelliteSensorBand.ttl  Geospatial-mdsGeo.ttl  MatProc.ttl  XRD.ttl
SupplementaryMaterials/SPARQL_Queries/: Capacitors.json  CaseStudy1.json  CaseStudy2.json  EBSD.json  GeoOutage.json  Geospatial.json  MatProc.md  MaterialsScience_General.json  XRD.json
docs/site/: index.html
docs/site/static/css/: index.css
docs/source/: api.rst  conf.py  helpers.rst  index.rst  modules.rst  ontocheck.helpers.rst  ontocheck.rst  usage.rst
docs/source/_autosummary/: Onto_Assessment.metrics.check_for_isolated_elements.rst  Onto_Assessment.metrics.check_rdf_dump_accessibility_ttl.rst  Onto_Assessment.metrics.count_class_connected_components.rst  Onto_Assessment.metrics.find_duplicate_labels_from_graph.rst  Onto_Assessment.metrics.mainAltLabelCheck_v_0_0_1.rst  Onto_Assessment.metrics.mainLeafNodeCheck_v_0_0_1.rst  Onto_Assessment.metrics.rst
src/Onto-Assessment-Package/helpers/: helpers.py
src/Onto-Assessment-Package/metrics/: check_external_data_provider_links_ttl.py  check_for_isolated_elements.py  check_human_readable_license_ttl.py  check_rdf_dump_accessibility_ttl.py  check_sparql_accessibility_ttl.py  count_class_connected_components.py  find_duplicate_labels_from_graph.py  get_properties_missing_domain_and_range.py  mainAltLabelCheck_v_0_0_1.py  mainDefCheck_v_0_0_1.py  mainLeafNodeCheck_v_0_0_1.py  mainSemanticConnection_v_0_0_1.py
src/OntoAssessment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/OntoCheck.egg-info/: PKG-INFO  SOURCES.txt
src/Onto_Assessment/: altLabelCheck.py  check_human_readable_license_ttl.py  check_rdf_dump_accessibility_ttl.py  cli.py  count_class_connected_components.py  defCheck.py  get_properties_missing_domain_and_range.py  leafNodeCheck.py  run_assessment.py  semanticConnection.py
src/Onto_Assessment.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Onto_Assessment/metrics/: __init__.py  check_sparql_accessibility_ttl.py  defCheck.py  find_duplicate_labels_from_graph.py  semanticConnection.py
src/onto_assessment.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ontoassess/: find_duplicate_labels_from_graph.py  run_assessment.py
src/ontoassess.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ontocheck/: __init__.py  altLabelCheck.py  check_class_name_capital.py  check_class_name_space.py  check_label.py  class_search.py  cli.py  defCheck.py  leafNodeCheck.py  mds_design_check.py  run_assessment.py  semanticConnection.py  spell_check.py  task_based_metric.py
src/ontocheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ontocheck/helpers/: helpers.py
