[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoassess"
version = "0.0.1"
authors = [
  { name = "Rishabh Kundu, Van Tran, Redad Mehdi", email = "mxm1684@case.edu" },
]
maintainers = [
  { name = "Redad Mehdi", email = "mxm1684@case.edu" },
]
description = "A package for assessing the quality and structure of ontologies."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  "rdflib",
  "networkx",
  "requests",
]

[project.urls]
"Homepage" = "https://github.com/redad110/Ontology-Assessment"
"Documentation" = "https://ontology-assessment.readthedocs.io"

[project.scripts]
onto-assessment = "ontoassess.cli:main"  # ← Updated

# Add this section to tell setuptools where to find packages
[tool.setuptools.packages.find]
where = ["src"]
