[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OntoCheck"
version = "0.0.7.0"

authors = [
  { name = "Rishabh Kundu, Van Tran, Redad Mehdi, Ethan Frakes, Abhishek Daundkar, Maliesha Sumudumalie, Vibha S. Mandayam, Jacob A. Lample, Mengjie Li, Laura S. Bruckman, Erika I. Barcelos, Alp Sehirlioglu, Roger H. French, Yinghui Wu", email = "yinghui.wu2@case.edu" },
]


maintainers = [
  { name = "Redad Mehdi", email = "mxm1684@case.edu" },
]
description = "Task-based Ontology Assessment for Scientific Domain Applications."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  "rdflib",
  "networkx",
  "requests",
]

[project.urls]
"Homepage" = "https://github.com/cwru-sdle/OntoCheck"
"Documentation" = "https://ontocheck.readthedocs.io/en/latest/"

[project.scripts]
ontocheck = "ontocheck.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
